[tool.poetry]
name = "slam-experiments"
version = "0.1.0"
description = ""
authors = ["ViV99"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
g2o-python = "^0.0.12"
jaxlie = "^1.3.4"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"
opencv-python = "^4.9.0.80"
plotly = "^5.19.0"
sophuspy = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
